sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

04-18-2016 16:47:
C:\wamp64\www\1PourcentArtistique\.sublime-gulp-tmp.js:54
  gulp.src(source + '/assets/**)
                    ^^^^^^^^^^^^

SyntaxError: Unexpected token ILLEGAL
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:387:25)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Module.require (module.js:367:17)
    at require (internal/module.js:16:19)
    at requireGulp (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:413:34)


04-18-2016 16:47:
C:\wamp64\www\1PourcentArtistique\.sublime-gulp-tmp.js:54
  gulp.src(source + '/assets/**)
                    ^^^^^^^^^^^^

SyntaxError: Unexpected token ILLEGAL
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:387:25)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Module.require (module.js:367:17)
    at require (internal/module.js:16:19)
    at requireGulp (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:413:34)


04-18-2016 16:48:
C:\wamp64\www\1PourcentArtistique\.sublime-gulp-tmp.js:54
  gulp.src(source + '/assets/**)
                    ^^^^^^^^^^^^

SyntaxError: Unexpected token ILLEGAL
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:387:25)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Module.require (module.js:367:17)
    at require (internal/module.js:16:19)
    at requireGulp (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:413:34)


04-18-2016 16:48:
C:\wamp64\www\1PourcentArtistique\.sublime-gulp-tmp.js:54
  gulp.src(source + '/assets/**)
                    ^^^^^^^^^^^^

SyntaxError: Unexpected token ILLEGAL
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:387:25)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Module.require (module.js:367:17)
    at require (internal/module.js:16:19)
    at requireGulp (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\kevine2710\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:413:34)
